More Company Update

--- a/companies/pacbio.html
+++ b/companies/pacbio.html
@@ -15,11 +15,16 @@
           <!-- Page Title -->
           <title>Pacific Biosciences Profile</title>
 
+          <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Profile for Pacific Biosciences in Sequencing">
           <meta name="author" content="CoderKid2k">
+
+          <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
+          <!-- Style Sheets -->
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
@@ -93,9 +98,12 @@
                          </section>  
 
                          <section class="section-container">
-                              <h2 class="list-header">Pipeline</h2>
+                              <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   They have 2 products now with Onso and Rvio. They will be developing new tests and applications for both.
+                                   I haven’t followed PacBio all that long, but I think the CEO Christian Henry is doing a good job so 
+                                   far. They are one of the few sequencing companies to have both long and short read sequencing options. 
+                                   They continue to drive innovation with 2 new product launches at the end of last year. Now we just have 
+                                   to wait and see if they can translate that into sales growth.
                               </p>
                               
                          </section> 
@@ -122,11 +130,11 @@
                               <p class="profiles">
                                    They currently have about $175 million in annual sales projected for 2023. The market for sequencing is estimated to double 
                                    from 2022 to 2026 from $7 billion to $14 billion. With 2 products now for both long and short sequencing, I think
-                                   Pacbio could capture at least $1 billion in sales over time. At just 10x sales, that would be worth $5 billion 
+                                   Pacbio could capture at least $1 billion in sales over time. At just 10x sales, that would be worth a $5 billion 
                                    market cap. Their current value would be around $1.75 billion based on current sales.
                               </p>
                               <p class="profiles">
-                                   All in, that is a $2.65 billion market cap. Based on the 246 millon shares outstanding, that comes to $10.77. 
+                                   All in, that is a $2.65 billion market cap. Based on the 246 million shares outstanding, that comes to $10.77. 
                               </p>
                          </section>  
 
