--- a/companies/prime.html
+++ b/companies/prime.html
@@ -12,13 +12,19 @@
           gtag('config', 'G-39ZHJP00WP');
           </script>
 
+          <!-- Page Title -->
           <title>Prime Medicine Profile</title>
 
+          <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Profile for Prime Medicines in CRISPR Prime Editing">
           <meta name="author" content="CoderKid2k">
+
+          <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
+          <!-- Sytle Sheets -->
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
@@ -93,22 +99,12 @@
                          </section>  
 
                          <section class="section-container">
-                              <h2 class="list-header">Pipeline</h2>
+                              <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   Friedreich's Ataxia <progress class="progress-bar" value="5" max="100"></progress>
-                                   Early Preclinic
-                              </p>
-                              <p class="profiles">
-                                   Cystic Fibrosis <progress class="progress-bar" value="5" max="100"></progress>
-                                   Early Preclinic
-                              </p>
-                              <p class="profiles">
-                                   Wilson's Disease <progress class="progress-bar" value="5" max="100"></progress>
-                                   Early Preclinic
-                              </p>
-                              <p class="profiles">
-                                   CGD <progress class="progress-bar" value="5" max="100"></progress>
-                                   Early Preclinic
+                                   I have only followed this company since the IPO. It hasn’t been very long. I have followed the CEO Keith 
+                                   Gottesdiener when I was an investor in Rhythm Pharma. I think he did a good job over there so he does 
+                                   get a level of trust that was earned developing another biotech company. Now we will have to wait and 
+                                   see if he can repeat that success with this company.
                               </p>
                          </section> 
                          
@@ -137,7 +133,7 @@
                                    Chronic Granulomatous Disease is an extremely rare disease where Macrophages have a genetic defect which prevents
                                    them from being able to destroy the ingested pathogens they take in. It is estimated that only 20 people are born 
                                    CGD each year. Their approach is to edit iPSC stem cells to replace the defective stem cells. With this being a stem 
-                                   cell therapy, all those errors by Reverse Transcriptase will be in there forever to mutate and cause disease or cancer.
+                                   cell therapy, all those errors by Reverse Transcriptase will be there forever to mutate and cause disease or cancer.
                               </p>
                          </section>  
 
