--- a/companies/recursion.html
+++ b/companies/recursion.html
@@ -12,13 +12,19 @@
           gtag('config', 'G-39ZHJP00WP');
           </script>
 
+          <!-- Page Title -->
           <title>Recursion Pharma Profile</title>
 
+          <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Profile for Resursion in Robotics, AI and Machine learning in TechBio">
           <meta name="author" content="CoderKid2k">
+
+          <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
+          <!-- Style Sheets -->
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
@@ -93,22 +99,12 @@
                          </section>  
 
                          <section class="section-container">
-                              <h2 class="list-header">Pipeline</h2>
+                              <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   REC-4881 - MEK1/2 <progress class="progress-bar" value="50" max="100"></progress>
-                                   Phase 2
-                              </p>
-                              <p class="profiles">
-                                   REC-2282 - NF2 <progress class="progress-bar" value="50" max="100"></progress>
-                                   Phase 2
-                              </p>
-                              <p class="profiles">
-                                   REC-994 - CCM <progress class="progress-bar" value="50" max="100"></progress>
-                                   Phase 2
-                              </p>
-                              <p class="profiles">
-                                   REC-3964 Cdif <progress class="progress-bar" value="25" max="100"></progress>
-                                   Phase 1
+                                   I haven’t been following Recursion all that long, but I think Chris Gibson is doing a good job 
+                                   so far. He is out there presenting a lot and talking about their technology. They are moving into 
+                                   phase 2 with their programs, but they haven’t run any trials of their own before this. It will take 
+                                   some time to see how well they manage the clinical development process.
                               </p>
                          </section> 
                          
