--- a/companies/revolution.html
+++ b/companies/revolution.html
@@ -12,13 +12,19 @@
           gtag('config', 'G-39ZHJP00WP');
           </script>
 
+          <!-- Page Title -->
           <title>Revolution Medicines Profile</title>
 
+          <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Profile for Revolution Medicines in Kinase Inhbitors">
           <meta name="author" content="CoderKid2k">
+
+          <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
+          <!-- Style Sheets -->
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
@@ -88,29 +94,20 @@
                          </section>  
 
                          <section class="section-container">
-                              <h2 class="list-header">Pipeline</h2>
+                              <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   RMC-6236 RAS Multi<progress class="progress-bar" value="20" max="100"></progress>
-                                   Phase 1
-                              </p>
-                              <p class="profiles">
-                                   RMC-6291 KRAS G12C<progress class="progress-bar" value="20" max="100"></progress>
-                                   Phase 1
-                              </p>
-                              <p class="profiles">
-                                   RMC-4630 SHP2<progress class="progress-bar" value="40" max="100"></progress>
-                                   Phase 2
-                              </p>
-                              <p class="profiles">
-                                   RMC-5552 4EBP1<progress class="progress-bar" value="20" max="100"></progress>
-                                   Phase 1
+                                   I have followed Revolution Medicines and Mark Goldsmith for over a year now. I think he is doing a 
+                                   good job with this company. They are out there talking about their science and how they are 
+                                   different from others in this space. They have managed the balance sheet well. They even have some 
+                                   early data to show they are working through the drug development process. It will take more time to 
+                                   see how their science translates into data.
                               </p>
                          </section> 
                          
                          <section class="section-container">
                               <h2 class="list-header">Science</h2>
                               <p class="profiles">
-                                   RMC-6291 targets multiple forms of RAS to include mutiple KRAS targets. This is designed to be a pan inhibitor. 
+                                   RMC-6291 targets multiple forms of RAS to include multiple KRAS targets. This is designed to be a pan inhibitor. 
                                    There is a lot of risk in this approach as any hitting of wild type RAS can come with serious side effects. The data shows 
                                    that upward of 30% of all cancers have a RAS mutation. This could affect well over 100,000 patients across multiple mutations.
                                    This is in early phase 1 with no data yet.
@@ -123,12 +120,12 @@
                               </p>
                               <p class="profiles">
                                    RMC-4630 is a SHP2 inhibitor. This is the first kinase activated by the growth receptor inside cells. It starts 
-                                   the top of the MAPK pathway. This is designed to be a companion inhibitor to RAS drugs. This is currently in phase 
-                                   2 trials. The phase 1 data was encouraging, but it needs a dosing regiment to keep tolerability. 
+                                   at the top of the MAPK pathway. This is designed to be a companion inhibitor to RAS drugs. This is currently in phase 
+                                   2 trials. The phase 1 data was encouraging, but it needs a dosing regimen to keep tolerability. 
                               </p>
                               <p class="profiles">
                                    RMC-5552 is a 4EBP1 inhibitor which is downstream of mTOR. This is being designed as another RAS companion 
-                                   drug. The precinical data was not that compelling so we will have see how it works in phase 1.
+                                   drug. The preclinical data was not that compelling so we will have to see how it works in phase 1.
                               </p>
                          </section>  
 
@@ -140,11 +137,11 @@
                               <p class="profiles">
                                    RMC-6236 is the RAS multi drug with huge potential if the data works out. It could have a market size of 
                                    100,000 patients. Even if they get only 30% of that market at a $100,000 price, it comes out to $3 billion 
-                                   in potential. I would give it a .1 multiplier which give this program $300 million value.
+                                   in potential. I would give it a .1 multiplier which gives this program $300 million value.
                               </p>
                               <p class="profiles">
                                    RMC-6291 is a KRAS G12C inhibitor. If RAS multi works, I don't think this gets much market share. I would think 
-                                   it might have value only if the RAS multi fails. That would be a mutually exlusive outcome. This would replace 
+                                   it might have value only if the RAS multi fails. That would be a mutually exclusive outcome. This would replace 
                                    only some of the value lost if RAS multi fails.
                               </p>
                               <p class="profiles">
