--- a/companies/sana.html
+++ b/companies/sana.html
@@ -12,13 +12,19 @@
           gtag('config', 'G-39ZHJP00WP');
           </script>
 
+          <!-- Page Title -->
           <title>Sana Biotechnology Profile</title>
 
+          <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Profile for Sana Biotechnology in iPSC and cell therapies">
           <meta name="author" content="CoderKid2k">
+
+          <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
+          <!-- Style Sheets -->
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
@@ -93,22 +99,14 @@
                          </section>  
 
                          <section class="section-container">
-                              <h2 class="list-header">Pipeline</h2>
+                              <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   SC291 - CD19 ex-vivo <progress class="progress-bar" value="15" max="100"></progress>
-                                   IND submitted.
-                              </p>
-                              <p class="profiles">
-                                   SG295 - CD19 in-vivo <progress class="progress-bar" value="10" max="100"></progress>
-                                   IND in 2023
-                              </p>
-                              <p class="profiles">
-                                   SC262 - CD22 <progress class="progress-bar" value="5" max="100"></progress>
-                                   IND in 2023
-                              </p>
-                              <p class="profiles">
-                                   SC451 Diabetes <progress class="progress-bar" value="5" max="100"></progress>
-                                   IND in 2024
+                                   I have been following Sana and Steve Harr for over a year now. I think he is a good CEO. He does 
+                                   really well on science and presenting the science for the company. I do think he has been 
+                                   overzealous on spending and recently had to cut back programs and spending. I am glad he was good 
+                                   enough to react to the need, but I think he should have been cost wise from the beginning. They 
+                                   are just entering the clinic now, and it will take time so see how well they manage the drug 
+                                   development process.
                               </p>
                          </section> 
                          
@@ -122,14 +120,14 @@
                               <p class="profiles">
                                    SG295 is for CD19 for patients with B cell lymphomas.  This is their in-vivo fusogen delivered CAR-T cell therapy. 
                                    They have the hypoimmune edits in these cells. This data will inform us of what 
-                                   fugogen contributes to these cell therapies. This could completely change how we do cell therapies if it works well. 
+                                   fusogen contributes to these cell therapies. This could completely change how we do cell therapies if it works well. 
                                    They are planning the IND for this program 
                                    in 2023. 
                               </p>
                               <p class="profiles">
                                    SC262 is for CD22 for patients with B cell lymphomas. This would be for patients who failed CD19 or
                                    it can be combined with other CD19 therapies. They do have the hypoimmune edits in these cells. It will 
-                                   also be our first look at CD22 as a target. This data will inform us to what CD22 can contribute to cell therapies.
+                                   also be our first look at CD22 as a target. This data will inform us of what CD22 can contribute to cell therapies.
                                    They plan to submit an IND for this program in 2023.
                               </p>
                               <p class="profiles">
