--- a/companies/relay.html
+++ b/companies/relay.html
@@ -12,13 +12,19 @@
           gtag('config', 'G-39ZHJP00WP');
           </script>
 
+          <!-- Page Title -->
           <title>Relay Therapeutics Profile</title>
 
+          <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Profile for Relay Therapeutics in Computational Chemistry, AI and Machine Learing in TechBio">
           <meta name="author" content="CoderKid2k">
+
+          <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
+          <!-- Style Sheets -->
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
@@ -96,26 +102,14 @@
                          </section>  
 
                          <section class="section-container">
-                              <h2 class="list-header">Pipeline</h2>
+                              <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   RLY-4008 - FGFR2 <progress class="progress-bar" value="25" max="100"></progress>
-                                   Phase 1
-                              </p>
-                              <p class="profiles">
-                                   RLY-2608 - PI3Ka <progress class="progress-bar" value="10" max="100"></progress>
-                                   Phase 1
-                              </p>
-                              <p class="profiles">
-                                   RLY-5836 - PI3Ka <progress class="progress-bar" value="5" max="100"></progress>
-                                   Preclinic
-                              </p>
-                              <p class="profiles">
-                                   CDK2 <progress class="progress-bar" value="5" max="100"></progress>
-                                   Preclinic
-                              </p>
-                              <p class="profiles">
-                                   ERa Degrader <progress class="progress-bar" value="5" max="100"></progress>
-                                   Preclinic
+                                   I have been following Relay and Sanjiv Patel for a bit over a year now. I think he is a very strong 
+                                   CEO. They have built a powerful technology platform from a combination of licensing and buying 
+                                   technology. He is out there telling the story at the conferences and does a good job at doing it. 
+                                   They even put up some early data that impressed investors to show they can handle the drug development 
+                                   process. It will still take time to see if they can manage all aspects of building a powerhouse 
+                                   biotech company.
                               </p>
                          </section> 
                          
