Finished Company Pages

--- a/companies/companies.html
+++ b/companies/companies.html
@@ -125,7 +125,7 @@
                                    <a href="invitae.html">Invitae (NVTA)</a>
                               </li>
                               <li>
-                                   <a href="pacbio.html">PacBio (PCAB)</a>
+                                   <a href="pacbio.html">PacBio (PACB)</a>
                               </li>
                               <li>
                                    <a href="oxford.html">Oxford Nanopore (ONTTF)</a>
