--- a/companies/schrodinger.html
+++ b/companies/schrodinger.html
@@ -12,13 +12,19 @@
           gtag('config', 'G-39ZHJP00WP');
           </script>
 
+          <!-- Page Title -->
           <title>Schrodinger Profile</title>
 
+          <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Profile for Schrodinger for physics based chemistry in Techbio">
           <meta name="author" content="CoderKid2k">
+
+          <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
+          <!-- Style Sheets -->
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
@@ -83,28 +89,22 @@
                               <p class="profiles">
                                    They are developing software used for drug discovery. Their primary software is about
                                    physics based chemistry to design molecules. They are focused on translating physics based 
-                                   chemistry into computer aided design.
-                                   They have added a lot of other software around
+                                   chemistry into computer aided design. They have added a lot of other software around
                                    the drug discovery process to include Artificial Intelligence and Machine Learning. They use the 
-                                   software that develops the chemitry models to train the machine learing algorithms.
+                                   software that develops the chemistry models to train the machine learning algorithms.
                                    They license this software to other companies. They recently started
                                    using their own software to develop their own pipeline. 
                               </p>
                          </section>  
 
                          <section class="section-container">
-                              <h2 class="list-header">Pipeline</h2>
+                              <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   SGR-1505 - MALT1 <progress class="progress-bar" value="20" max="100"></progress>
-                                   Phase 1
-                              </p>
-                              <p class="profiles">
-                                   SGR-2291 - CDC7 <progress class="progress-bar" value="10" max="100"></progress>
-                                   IND Enabling Studies
-                              </p>
-                              <p class="profiles">
-                                   Wee1 <progress class="progress-bar" value="5" max="100"></progress>
-                                   Preclinic
+                                   I have been following Schrodinger for about a year now. I think Ramy Farid is a very solid CEO. He is 
+                                   focused on the tech and software side of the company. He seems like a good business person with 
+                                   running software sales. They hired Karen Akinsanya to run the biotech side of the business for drug 
+                                   discovery. I think does a great job on science and drug discovery. I just wish they focused more on 
+                                   the biotech side as it's where the biggest potential exists.
                               </p>
                          </section> 
                          
