--- a/companies/twist.html
+++ b/companies/twist.html
@@ -76,7 +76,7 @@
           <main>
 
                <div class="company-container">
-                    <p class="updated">Last Updated 2/4/2023</p>
+                    <p class="updated">Last Updated 2/13/2023</p>
 
                     <h1 class="company-name"><a href="https://www.twistbioscience.com/">Twist Bioscience</a></h1>
 
@@ -156,6 +156,18 @@
                          </section>  
 
                          <section class="section-container">
+                              <h2 class="list-header">Partnerships</h2>
+                              <p class="profiles">
+                                   They have a total of 63 programs now that include milestones and/or royalties.
+                                   Terms have not been disclosed on these programs.
+                              </p>
+                              <p class="profiles">
+                                   Astellas for multiple programs in antibodies with $11 million per program milestone 
+                                   and small royalty on products
+                              </p>
+                         </section> 
+
+                         <section class="section-container">
                               <h2 class="list-header">Events</h2>
                               <p class="profiles">
                                    They continue to assemble their first end-to-end DNA data storage system in anticipation of pilot 
@@ -165,9 +177,15 @@
                          </section> 
 
                          <section class="section-container">
-                              <h2 class="list-header">Data Readouts</h2>
+                              <h2 class="list-header">Company Website Links</h2>
                               <p class="profiles">
-                                   There are no Data Readouts as they run no clinical trials.
+                                   <a href="https://investors.twistbioscience.com/news-releases" target="_blank">Press Releases</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://investors.twistbioscience.com/events-and-presentations" target="_blank">Events & Presentations</a>
+                              </p>
+                              <p class="profiles">
+                                   <a href="https://investors.twistbioscience.com/financial-information/sec-filings" target="_blank">SEC Filings</a>
                               </p>
                          </section> 
                     </div>
