--- a/companies/verve.html
+++ b/companies/verve.html
@@ -12,13 +12,19 @@
           gtag('config', 'G-39ZHJP00WP');
           </script>
 
+          <!-- Page Title -->
           <title>Verve Therapeutics Profile</title>
 
+          <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Profile for Vere Therapeutics in CRISPR base editing">
           <meta name="author" content="CoderKid2k">
+
+          <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
+          <!-- Style Sheets -->
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
@@ -90,18 +96,13 @@
                          </section>  
 
                          <section class="section-container">
-                              <h2 class="list-header">Pipeline</h2>
+                              <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   VERV-101 PCSK9<progress class="progress-bar" value="20" max="100"></progress>
-                                   Phase 1
-                              </p>
-                              <p class="profiles">
-                                   VERV-201 ANGPTL3 <progress class="progress-bar" value="10" max="100"></progress>
-                                   IND Enabling Studies.
-                              </p>
-                              <p class="profiles">
-                                   Lp&#40;a&#41; <progress class="progress-bar" value="5" max="100"></progress>
-                                   Preclinical
+                                   I haven’t been following Verve or Sekar Kathiresan all that long. I do think he is a good CEO, but I 
+                                   think he overestimates the potential for these therapies to take market share for existing therapies. 
+                                   They are just starting in the clinic so we will have to wait to see some data. I do think they are 
+                                   doing a good job of managing the balance sheet well. They seem to focus on innovation with a new novel 
+                                   editor in the works.
                               </p>
                          </section>
                          
@@ -135,7 +136,7 @@
                               </p>
                               <p class="profiles">
                                    VERV-201 I think this program will compete with other very competitive cholesterol therapies.
-                                   It is being tested in 2 different cholesteroal diseases with one of them being HoFH.
+                                   It is being tested in 2 different cholesterol diseases with one of them being HoFH.
                                    I think it could manage about 20,000 patients a year at a price of $40,000. 
                                    That would make this program about $800 million in sales. I would give them .1 multiplier for the preclinical stage
                                    of development. That comes out to another $80 million value.
@@ -159,7 +160,7 @@
                               <h2 class="list-header">Data Readouts</h2>
                               <p class="profiles">
                                    <a href="https://ir.vervetx.com/news-releases/news-release-details/verve-therapeutics-announces-publication-verve-101-preclinical">
-                                   NHP Data from Preclinic
+                                   NHP Data from Preclinical
                                    </a>
                               </p>
                          </section> 
