--- a/index.html
+++ b/index.html
@@ -95,16 +95,16 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
+                                   <strong>2/10/2023: </strong> I finished up the Companies pages. I even started adding new data 
+                                   to companies as they report earnings with links to the Company's Website and Partnerships.
+                              </p>
+                              <p> 
                                    <strong>2/12/2023: </strong> I fixed the Companies Page with a new format. I also added a Back to Companies 
                                    Page link at the bottom of every company profile for faster navigation. 
                               </p>
                               <p> 
                                    <strong>2/11/2023: </strong> Finished up the Chemistry and Biochemistry pages. I plan to start the 
                                    Biology pages tomorrow.
-                              </p>
-                              <p> 
-                                   <strong>2/10/2023: </strong> I added the Science Page under Chemistry for Biochemistry. I plan to 
-                                   fill it out over the weekend.
                               </p>
                          </div>
                     </section>
